--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.2",
     "octokit": "^5.0.3"
+  },
+  "engines": {
+    "node": ">=22.16.0 <23.0.0"
   }
 }
