Removed old entry point zzboi.js

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,37 @@
+# Node.js
 node_modules/
-.env
-.DS_Store
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.node-version
+.yarn*
+
+# Environment
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Logs
+logs/
+*.log
+
+# Build output
+dist/
+build/
+
+# Editor files
+*.swp
+*.swo
+*.swn
+.DS_Store
+Thumbs.db
+
+# IDE
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# OS
+*.tmp
+*.temp
+*.bak
