--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "octokit": "^5.0.3"
   },
   "engines": {
