--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "event",
     "scheduler"
   ],
-  "author": "Your Name",
-  "license": "MIT",
+  "author": "Kiera",
+  "license": "gala-bot",
   "dependencies": {
+    "better-sqlite3": "^12.2.0",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "octokit": "^3.2.2"
+    "express": "^5.1.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   }
 }
